--- a/client/src/main/resources/client/scenes/BoardCreate.fxml
+++ b/client/src/main/resources/client/scenes/BoardCreate.fxml
@@ -1,42 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="200.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardCreateCtrl">
+<BorderPane prefHeight="304.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardCreateCtrl">
     <padding>
         <Insets bottom="40" left="40" right="40" top="40" />
     </padding>
     <center>
-        <GridPane prefHeight="120.0" prefWidth="531.0" vgap="10">
+        <GridPane prefHeight="163.0" prefWidth="519.0" vgap="10">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="100.0" prefWidth="106.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="236.0" minWidth="100.0" prefWidth="196.0" />
                 <ColumnConstraints maxWidth="157.0" minWidth="54.0" prefWidth="145.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="77.0" minHeight="30.0" prefHeight="57.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="65.0" minHeight="16.0" prefHeight="58.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="51.0" minHeight="30.0" prefHeight="37.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="51.0" minHeight="30.0" prefHeight="37.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label text="Board Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="boardNameField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <Label text="Board Name:" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+                <TextField fx:id="boardNameField" GridPane.columnIndex="1" GridPane.rowIndex="0">
+               <font>
+                  <Font size="20.0" />
+               </font></TextField>
 
-                <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label prefHeight="25.0" prefWidth="129.0" text="Password:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+                <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font></PasswordField>
 
-                <CheckBox fx:id="usePasswordCheckbox" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="18.0" prefWidth="126.0" text="Use Password" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <CheckBox fx:id="PasswordCheckbox" alignment="TOP_LEFT" contentDisplay="CENTER" prefHeight="28.0" prefWidth="302.0" text="Password protected" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="20.0" />
+               </font></CheckBox>
 
-                <Button fx:id="createButton" prefWidth="100.0" text="Create" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Button fx:id="createButton" prefWidth="100.0" text="Create" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
             </children>
         </GridPane>
     </center>
