--- a/client/src/main/resources/client/scenes/BoardCreate.fxml
+++ b/client/src/main/resources/client/scenes/BoardCreate.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="304.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardCreateCtrl">
+<BorderPane prefHeight="209.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardCreateCtrl">
     <padding>
         <Insets bottom="40" left="40" right="40" top="40" />
     </padding>
@@ -39,21 +37,7 @@
                   <Font size="20.0" />
                </font></TextField>
 
-                <Label prefHeight="25.0" prefWidth="129.0" text="Password:" GridPane.rowIndex="2">
-               <font>
-                  <Font size="20.0" />
-               </font></Label>
-                <PasswordField fx:id="passwordField" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font size="20.0" />
-               </font></PasswordField>
-
-                <CheckBox fx:id="PasswordCheckbox" alignment="TOP_LEFT" contentDisplay="CENTER" prefHeight="28.0" prefWidth="302.0" text="Password protected" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font size="20.0" />
-               </font></CheckBox>
-
-                <Button fx:id="createButton" prefWidth="100.0" text="Create" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <Button fx:id="createButton" alignment="CENTER" contentDisplay="CENTER" prefWidth="100.0" text="Create" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="20.0" />
                </font></Button>
