--- a/client/src/main/resources/client/scenes/css/BoardOverview.css
+++ b/client/src/main/resources/client/scenes/css/BoardOverview.css
@@ -69,3 +69,33 @@
 #sPaneListView {
     -fx-background-color: transparent;
 }
+
+#sideMenu .list-cell { -fx-text-fill: white; }
+#sideMenu .list-cell:odd {
+    -fx-background-color:#2f58cd ;
+    fx-border-width: 0;
+}
+#sideMenu .list-cell:even {
+    -fx-background-color: #2f58cd;
+    fx-border-width: 0;
+}
+
+#smButton {
+    -fx-color: #fff;
+    -fx-cursor: pointer;
+    -fx-font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+    -fx-font-size: 13px;
+    -fx-height: 44px;
+    -fx-line-height: 1.15;
+    -fx-text-align: center;
+}
+
+
+#smButton {
+    -fx-text-fill: black;
+    -fx-background-color: #8da1ff;
+    -fx-border-radius: 6px;
+    -fx-transition: all .2s,box-shadow .08s ease-in;
+    -fx-touch-action: manipulation;
+    -fx-width: 100%;
+}
